--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "pino-pretty": "^5.0.2",
     "prettier": "^2.3.0",
-    "typescript": "^4.2.4",
+
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
   },
@@ -32,6 +32,7 @@
     "phc-argon2": "^1.1.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "typescript": "^4.2.4"
   }
 }
