--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "node ace build --production",
-    "start": "node server.js",
+    "build": "node ace build --prod",
+    "start": "node ace serve --watch",
     "start:prod": "node ./build/server.js",
-    "dev": "node ace serve --watch",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write ."
   },
@@ -19,7 +18,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "pino-pretty": "^5.0.2",
     "prettier": "^2.3.0",
-
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
   },
@@ -35,5 +33,8 @@
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
     "typescript": "^4.2.4"
+  },
+  "engines": {
+    "node": "12.18.3"
   }
 }
