--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "node ace build --prod",
     "start": "node ace serve --watch",
-    "start:prod": "node ./build/server.js",
+    "start:prod": "ENV_SILENT=true node build/server.js",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write ."
   },
