--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "build": "node ace build --prod",
     "start": "node ace serve --watch",
-    "start:prod": "ENV_SILENT=true node build/server.js",
-    "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "start:prod": "node ./build/server.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.0",
