--- a/package.json
+++ b/package.json
@@ -7,17 +7,6 @@
     "start": "node ace serve --watch",
     "start:prod": "node ./build/server.js"
   },
-  "devDependencies": {
-    "adonis-preset-ts": "^2.1.0",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-adonis": "^1.3.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "pino-pretty": "^5.0.2",
-    "prettier": "^2.3.0",
-    "youch": "^2.2.2",
-    "youch-terminal": "^1.1.1"
-  },
   "dependencies": {
     "@adonisjs/assembler": "^5.3.0",
     "@adonisjs/auth": "^5.1.1",
@@ -30,7 +19,16 @@
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "adonis-preset-ts": "^2.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-adonis": "^1.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "pino-pretty": "^5.0.2",
+    "prettier": "^2.3.0",
+    "youch": "^2.2.2",
+    "youch-terminal": "^1.1.1"
   },
   "engines": {
     "node": "14.17.0"
